--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 <body>
     <div class="header">
         <div class="header-content">
-	    <img src="images/spoga.png" alt="spoga">
+	   
             <img src="images/LOGO PNG.png" alt="GLOBAL BASE SOURCING LIMITED">
             
             <!-- Add more images as needed -->
@@ -139,7 +139,7 @@
             <table>
                 <tr>
                     <th>Product</th>
-                    <td>Planter Basket Set of 2</td>
+                    <td>Planter Basket Set of 3</td>
                 </tr>
                 <tr>
                     <th>Product Code</th>
@@ -151,13 +151,14 @@
                 </tr>
                 <tr>
                     <th>Product Size</th>
-                    <td><br>Large :- Dia. 42cm x Height 31cm </br>
-Small :-  Dia. 32cm x Height 28cm
+                    <td><br>Large :- Dia. 40cm x Height 35cm </br>
+               <td><br>Medium :- Dia. 33cm x 30cm 
+Small :-  Dia. 25cm x Height 25cm
 </td>
                 </tr>
                 <tr>
-                    <th>Product CBM</th>
-                    <td></td>
+                    <th>MOQ</th>
+                    <td>1153</td>
                 </tr>
                 <tr>
                     <th>Product Weight</th>
@@ -165,7 +166,7 @@ Small :-  Dia. 32cm x Height 28cm
                 </tr>
                 <tr>
                     <th>Unit</th>
-                    <td>set</td>
+                    <td>Set</td>
                 </tr>
                 <tr>
                     <th>Carton Size</th>
@@ -173,35 +174,35 @@ Small :-  Dia. 32cm x Height 28cm
                 </tr>
                 <tr>
                     <th>Carton Quantity</th>
-                    <td>1 set (2 pcs)</td>
+                    <td>1 Set (3 Pcs)</td>
                 </tr>
                 <tr>
                     <th>Carton CBM</th>
                     <td>0.059</td>
                 </tr>
                 <tr>
-                    <th>20 Ft Container Carton Quantity</th>
-                    <td>455 Carton</td>
+                    <th>20 Ft Container  Quantity</th>
+                    <td>475</td>
                 </tr>
                 <tr>
-                    <th>40 Ft Container Carton Quantity</th>
-                    <td>910 Carton</td>
+                    <th>40 Ft Container Quantity</th>
+                    <td>1017</td>
                 </tr>
                 <tr>
-                    <th>40 HQ Container Carton Quantity</th>
-                    <td>1005 Carton</td>
+                    <th>40 HQ Container Quantity</th>
+                    <td>1153</td>
                 </tr>
                 <tr>
                     <th>Price</th>
-                    <td><button class="link-button" id="myBtn">Show Price</button></td>
+                    <td>USD 16.50</td>
                 </tr>
                 <tr>
                     <th>FOB Port</th>
                     <td>Jakarta, Indonesia</td>
                 </tr>
                 <tr>
-                    <th>More Details - Packaging PPT</th>
-                    <td><button class="link-button" onclick="window.location.href='Link';"> </button></td>
+                    <th>Others Details </th>
+                    <td>Loose Packing, Hangtag</button></td>
                 </tr>
             </table>
         </div>
