--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 </tr>
                 <tr>
                     <th>Product Size</th>
-                    <td><br>Large :- Dia. 40cm x Height 35cm </br>
+                    <td>Large :- Dia. 40cm x Height 35cm <br></br>
                <td><br>Medium :- Dia. 33cm x 30cm 
 Small :-  Dia. 25cm x Height 25cm
 </td>
@@ -201,7 +201,7 @@ Small :-  Dia. 25cm x Height 25cm
                     <td>Jakarta, Indonesia</td>
                 </tr>
                 <tr>
-                    <th>Others Details </th>
+                    <th>Other Details </th>
                     <td>Loose Packing, Hangtag</button></td>
                 </tr>
             </table>
